# CTR-XPlatform

./: CMakeLists.old  CMakeLists.txt  README.md  lorem_in.txt  main.cpp
crypto/: nonce_factory.h  padder_factory.h
